// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table - docKitExamples props-allowTags 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    content="Table"
    id="uuID1-header"
    key="uuID1-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-thead
      id="uuID2"
      key="uuID2"
    >
      <table-tr
        id="uuID3"
      >
        <table-th
          content="Name"
          id="uuID4"
        />
        <table-th
          content="Rank"
          id="uuID5"
        />
        <table-th
          content="Promotion prospects"
          id="uuID5"
        />
      </table-tr>
    </table-thead>
    <table-tbody
      id="uuID6"
      key="uuID6"
    >
      <table-tr
        id="uuID7"
      >
        <table-td
          content="Rimmer"
          id="uuID8"
        />
        <table-td
          content="2nd class technician"
          id="uuID8"
        />
        <table-td
          content="comical"
          id="uuID9"
        />
      </table-tr>
      <table-tr
        id="uuID10"
      >
        <UU5.Example.MyColumnComponent
          colorSchema="blue"
          id="allowID"
          span={1}
        />
      </table-tr>
    </table-tbody>
  </table>
  <Footer
    content="Table footer"
    id="uuID1-footer"
    key="uuID1-footer"
  />
</div>
`;

exports[`UU5.Bricks.Table - docKitExamples props-hover/Conseded 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    content="Table"
    id="uuID1-header"
    key="uuID1-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table uu5-bricks-table-hover"
  >
    <table-thead
      id="uuID2"
      key="uuID2"
    >
      <table-tr
        id="uuID3"
      >
        <table-th
          content="Name"
          id="uuID4"
        />
        <table-th
          content="Rank"
          id="uuID5"
        />
        <table-th
          content="Promotion prospects"
          id="uuID5"
        />
      </table-tr>
    </table-thead>
    <table-tbody
      id="uuID6"
      key="uuID6"
    >
      <table-tr
        id="uuID7"
      >
        <table-td
          content="Rimmer"
          id="uuID8"
        />
        <table-td
          content="2nd class technician"
          id="uuID8"
        />
        <table-td
          content="comical"
          id="uuID9"
        />
      </table-tr>
      <table-tr
        id="uuID10"
      >
        <UU5.Example.MyColumnComponent
          colorSchema="blue"
          id="allowID"
          span={1}
        />
      </table-tr>
    </table-tbody>
  </table>
  <Footer
    content="Table footer"
    id="uuID1-footer"
    key="uuID1-footer"
  />
</div>
`;

exports[`UU5.Bricks.Table - docKitExamples props-responsive 1`] = `
<div
  className="uu5-bricks-table uu5-bricks-table-responsive"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    content="Table"
    id="uuID1-header"
    key="uuID1-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-thead
      id="uuID2"
      key="uuID2"
    >
      <table-tr
        id="uuID3"
      >
        <table-th
          content="Name"
          id="uuID4"
        />
        <table-th
          content="Rank"
          id="uuID5"
        />
        <table-th
          content="Promotion prospects"
          id="uuID5"
        />
      </table-tr>
    </table-thead>
    <table-tbody
      id="uuID6"
      key="uuID6"
    >
      <table-tr
        id="uuID7"
      >
        <table-td
          content="Rimmer"
          id="uuID8"
        />
        <table-td
          content="2nd class technician"
          id="uuID8"
        />
        <table-td
          content="comical"
          id="uuID9"
        />
      </table-tr>
      <table-tr
        id="uuID10"
      >
        <UU5.Example.MyColumnComponent
          colorSchema="blue"
          id="allowID"
          span={1}
        />
      </table-tr>
    </table-tbody>
  </table>
  <Footer
    content="Table footer"
    id="uuID1-footer"
    key="uuID1-footer"
  />
</div>
`;

exports[`UU5.Bricks.Table - docKitExamples props-striped/Bordered 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    content="Table"
    id="uuID1-header"
    key="uuID1-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table uu5-bricks-table-striped uu5-bricks-table-bordered"
  >
    <table-thead
      id="uuID2"
      key="uuID2"
    >
      <table-tr
        id="uuID3"
      >
        <table-th
          content="Name"
          id="uuID4"
        />
        <table-th
          content="Rank"
          id="uuID5"
        />
        <table-th
          content="Promotion prospects"
          id="uuID5"
        />
      </table-tr>
    </table-thead>
    <table-tbody
      id="uuID6"
      key="uuID6"
    >
      <table-tr
        id="uuID7"
      >
        <table-td
          content="Rimmer"
          id="uuID8"
        />
        <table-td
          content="2nd class technician"
          id="uuID8"
        />
        <table-td
          content="comical"
          id="uuID9"
        />
      </table-tr>
      <table-tr
        id="uuID10"
      >
        <UU5.Example.MyColumnComponent
          colorSchema="blue"
          id="allowID"
          span={1}
        />
      </table-tr>
    </table-tbody>
  </table>
  <Footer
    content="Table footer"
    id="uuID1-footer"
    key="uuID1-footer"
  />
</div>
`;

exports[`UU5.Bricks.Table allowTags=undefined 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table bordered=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table bordered=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table uu5-bricks-table-bordered"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table checkGrammar=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table checkGrammar=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table checkHighlight=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table checkHighlight=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table checkSpaces=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table checkSpaces=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table className="my-classname" 1`] = `
<div
  className="uu5-bricks-table my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table condensed=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table condensed=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table uu5-bricks-table-condensed"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  />
</div>
`;

exports[`UU5.Bricks.Table content=12345 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  />
</div>
`;

exports[`UU5.Bricks.Table controlled=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table controlled=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table default props 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table disabled=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table disabled=true 1`] = `
<div
  className="uu5-bricks-table uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Table dynamic=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table dynamic=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
  <Footer
    content={
      <div>
        Footer of section
      </div>
    }
    id="uuID-footer"
    key="uuID-footer"
  />
</div>
`;

exports[`UU5.Bricks.Table header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Header
    content={
      <div>
        Header of section
      </div>
    }
    id="uuID-header"
    key="uuID-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table hidden=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table hidden=true 1`] = `
<div
  className="uu5-bricks-table uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table hover=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table hover=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table uu5-bricks-table-hover"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table id="myId" 1`] = `
<div
  className="uu5-bricks-table"
  id="myId"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level="0" 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level="1" 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level="2" 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level="3" 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level="4" 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level="5" 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level="6" 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level=0 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level=1 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level=2 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level=3 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level=4 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level=5 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table level=6 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table name="myName" 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table noIndex=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table noIndex=true 1`] = `
<div
  className="uu5-bricks-table uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table pureRender=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table pureRender=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table responsive=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table responsive=true 1`] = `
<div
  className="uu5-bricks-table uu5-bricks-table-responsive"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table selected=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table selected=true 1`] = `
<div
  className="uu5-bricks-table uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table striped=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table striped=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table uu5-bricks-table-striped"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table textCorrector=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table textCorrector=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table underline=false 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;

exports[`UU5.Bricks.Table underline=true 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID"
  style={Object {}}
  title={null}
>
  <table
    className="uu5-bricks-table-table"
  >
    <table-tr
      id="child01"
      key="child01"
    >
      <table-td
        content="Rimmer"
        id="child02"
      />
    </table-tr>
  </table>
</div>
`;
